--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -25,6 +25,8 @@
                     - :blank: 
                 - :group: !omap 
                     - :blank: 
+                    - :taken: 
+                    - :too_long: 
                 - :question: !omap 
                     - :blank: 
                 - :relationship: !omap 
@@ -75,6 +77,7 @@
         - :email: 
         - :followed_id: 
         - :follower_id: 
+        - :founder: 
         - :name: 
         - :passcode: 
         - :password: 
@@ -104,12 +107,15 @@
                 - :blank: 
             - :description: !omap 
                 - :blank: 
+                - :too_long: 
             - :email: !omap 
                 - :blank: 
                 - :invalid: 
             - :followed_id: !omap 
                 - :blank: 
             - :follower_id: !omap 
+                - :blank: 
+            - :founder: !omap 
                 - :blank: 
             - :name: !omap 
                 - :blank: 
