--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -14,6 +14,8 @@
                 - :too_long: 
                 - :too_short: 
             - :models: !omap 
+                - :chat_room: !omap 
+                    - :blank: 
                 - :feedback: !omap 
                     - :attributes: !omap 
                         - :content: !omap 
@@ -78,6 +80,7 @@
         - :followed_id: 
         - :follower_id: 
         - :founder: 
+        - :group: 
         - :name: 
         - :passcode: 
         - :password: 
@@ -116,6 +119,8 @@
             - :follower_id: !omap 
                 - :blank: 
             - :founder: !omap 
+                - :blank: 
+            - :group: !omap 
                 - :blank: 
             - :name: !omap 
                 - :blank: 
