--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -14,6 +14,8 @@
                 - :too_long: 
                 - :too_short: 
             - :models: !omap 
+                - :chat_message: !omap 
+                    - :blank: 
                 - :chat_room: !omap 
                     - :blank: 
                 - :feedback: !omap 
@@ -73,6 +75,7 @@
                     - :post_topic_vote: 
                     - :post_vote_for_next_step: 
     - :attributes: !omap 
+        - :chat_room: 
         - :conent: 
         - :content: 
         - :description: 
@@ -106,6 +109,8 @@
                 - :problem_owner: Problem owner
     - :errors: !omap 
         - :attributes: !omap 
+            - :chat_room: !omap 
+                - :blank: 
             - :content: !omap 
                 - :blank: 
             - :description: !omap 
