Add real-time update for supervision - setup node server

--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -95,6 +95,7 @@
         - :show: !omap 
             - :links: !omap 
                 - :new_thread: new thread
+            - :submit: Submit
     - :chat_updates: !omap 
         - :chat_update: !omap 
             - :links: !omap 
