Add step back functionality for Supervision
 * Add state_event as accessible for Supervision model
 * Add #update method to SupervisionsController
 * Add forms for step_back event in views/supervisions/show

Still to do:

 * Refactor JavaScript supervision.js to reflect changes

--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -55,6 +55,7 @@
                 - :solutions_feedback: !omap 
                     - :blank: 
                 - :supervision: !omap 
+                    - :invalid_event: 
                     - :invalid_transition: 
                 - :supervision_feedback: !omap 
                     - :blank: 
